-v1.1.0 : 'eraser' added , fixed mobile screen

--- a/main.scss
+++ b/main.scss
@@ -34,7 +34,7 @@ input,input:focus,input:hover{
     height: 100vh;
     overflow: hidden;
     background-color:white;
-    position: relative;
+    position: fixed;
 
 
     .pixel{
