--- a/main.css
+++ b/main.css
@@ -8,6 +8,7 @@ html,
 body {
   height: 100vh;
   width: 100vw;
+  overflow: hidden;
 }
 
 input, input:focus, input:hover {
@@ -21,7 +22,7 @@ input, input:focus, input:hover {
   height: 100vh;
   overflow: hidden;
   background-color: white;
-  position: relative;
+  position: fixed;
 }
 #board .pixel {
   aspect-ratio: 1;
