--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
 html,
@@ -15,6 +16,21 @@ input, input:focus, input:hover {
   outline: none;
   border: none;
   border-radius: 0;
+}
+
+#tools .size div::before, #tools section::before {
+  display: none;
+  position: absolute;
+  top: 100%;
+  right: 50%;
+  transform: translateY(50%) translateX(50%);
+  margin: auto;
+  font-size: 20px;
+  width: fit-content;
+  height: fit-content;
+  color: rgb(255, 255, 255);
+  background-color: rgb(2, 2, 2);
+  padding: 2px 10px;
 }
 
 #board {
@@ -47,7 +63,6 @@ input, input:focus, input:hover {
   right: 15px;
   height: 75px;
   padding: 0px 20px;
-  overflow: hidden;
   background-color: wheat;
   border-radius: 10px;
   display: flex;
@@ -62,40 +77,67 @@ input, input:focus, input:hover {
   justify-content: space-evenly;
   align-items: center;
   gap: 1vw;
+  position: relative;
   max-width: 100%;
   max-height: 100%;
+}
+#tools section:hover:before {
+  display: block;
 }
 #tools .size div {
   aspect-ratio: 1;
   cursor: pointer;
   background-color: rgba(0, 0, 0, 0.7);
-  border-radius: 50%;
   transition: transform 0.1s;
 }
 #tools .size div:hover {
   transform: scale(1.1);
 }
+#tools .size div:hover:before {
+  display: block;
+}
 #tools .size div:nth-child(1) {
-  width: 55px;
-  outline-offset: 2px;
+  width: 45px;
+}
+#tools .size div:nth-child(1)::before {
+  content: "L";
 }
 #tools .size div:nth-child(2) {
   width: 40px;
 }
+#tools .size div:nth-child(2)::before {
+  content: "M";
+}
 #tools .size div:nth-child(3) {
-  width: 30px;
+  width: 35px;
+}
+#tools .size div:nth-child(3)::before {
+  content: "S";
 }
 #tools .color input {
   cursor: pointer;
   width: 55px;
   height: 55px;
+  border-radius: 50%;
+  outline: 3px white solid;
+}
+#tools .color::before {
+  content: "colores";
 }
 #tools .delet {
+  margin-inline: 5px;
   cursor: pointer;
 }
 #tools .delet i {
   font-size: 30px;
-  color: purple;
+  color: rgb(189, 124, 124);
+  transition: transform 0.2s;
+}
+#tools .delet i:hover {
+  transform: translateY(-2px);
+}
+#tools .delet::before {
+  content: "clear";
 }
 
 /*# sourceMappingURL=main.css.map */
