--- a/main.scss
+++ b/main.scss
@@ -79,6 +79,7 @@ input,input:focus,input:hover{
 
 
 #tools{
+    
     z-index: 9;
     position: fixed;
     top:15px;right: 15px;
@@ -153,14 +154,23 @@ input,input:focus,input:hover{
             content: "colores";
         }
     }
+    
     .delet {
         margin-inline:5px ;
         cursor: pointer;
 
         i{
-            font-size: 30px;
-            color: rgb(189, 124, 124);
-            transition: transform .2s;
+            &:hover{
+                transform: translateY(-2px);
+            }
+        }
+        &::before{
+            content: "eraser";
+        }
+    }
+    .clear{
+        cursor: pointer;
+        i{
             &:hover{
                 transform: translateY(-2px);
             }
