--- a/main.css
+++ b/main.css
@@ -34,26 +34,12 @@ input, input:focus, input:hover {
 }
 
 #board {
+  cursor: crosshair;
   width: 100vw;
   height: 100vh;
   overflow: hidden;
   background-color: white;
   position: fixed;
-}
-#board .pixel {
-  aspect-ratio: 1;
-  position: absolute;
-  left: 0%;
-  top: 0%;
-}
-#board .s1 {
-  width: 20px;
-}
-#board .s2 {
-  width: 10px;
-}
-#board .s3 {
-  width: 5px;
 }
 
 #tools {
