--- a/main.scss
+++ b/main.scss
@@ -47,28 +47,12 @@ input,input:focus,input:hover{
 
 
 #board{
+    cursor: crosshair;
     width: 100vw;
     height: 100vh;
     overflow: hidden;
     background-color:white;
     position: fixed;
-
-
-    .pixel{
-        aspect-ratio: 1;
-        position: absolute;
-        left: 0%;top: 0%;
-
-    }
-    .s1{
-        width: 20px;
-    }
-    .s2{
-        width: 10px;
-    }
-    .s3{
-        width: 5px;
-    }
 
 }
 
