--- a/main.scss
+++ b/main.scss
@@ -74,7 +74,9 @@ input,input:focus,input:hover{
 
     @include flex($gap:1.5vw);
     section{
-        @include flex($gap:1vw);
+        position: relative;
+        height: 90%;
+        @include flex($gap:1vw,$dir:colwun);
         position: relative;
         max-width:100%;
         max-height:100%;
@@ -87,43 +89,39 @@ input,input:focus,input:hover{
         }
     }
     .size{
-        div{
-            aspect-ratio: 1;
-            cursor: pointer;
-            background-color: rgb(0, 0, 0,.7);
-            transition: transform .1s;
-            &:hover{
-                transform: scale(1.1);
+        input{
+            
+            width: 100px;
+            
+            background-color: transparent;
+            // mozilla
+            &::-moz-range-progress {
+                background-color: #ffffff; 
+                height: 8px;
+            }
+            &::-moz-range-track {  
+                height: 8px;
+                background-color: #6a6a6a;
+            }
+            &::-moz-range-thumb{
+                cursor: pointer;
+                background-color: rgb(0, 0, 0);
+                width: 20px;
+                height: 20px;
+                border-radius: 1000%;
+                border: none;
             }
 
-            &::before{
-                @extend %before-hover ;
-            }
-
-            &:hover:before{
-                display: block;
-            }
-
-
-            &:nth-child(1){
-                width: 45px;
-                &::before{
-                    content: "L";
-                }
-            }
-            &:nth-child(2){
-                width: 40px;
-                &::before{
-                    content: "M";
-                }
-            }
-            &:nth-child(3){
-                width: 35px;
-                &::before{
-                    content: "S";
-                }
-            }
         }
+        aside{
+            position: absolute;
+            @extend %before-hover;
+        }
+        
+        &:hover aside{
+            display: block;
+        }
+
     }
     .color{
         input{
